aws/require-encryption-aws-loadbalancers/.chainsaw-test/service-fail.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
